--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mantiqh - Logic. The Simple Solution. Website and Mobile Design and Development Company- Mantiqh Technologies</title>
-    <link rel="stylesheet" href="sytles.css">
+    <link rel="stylesheet" href="css/sytles.css">
 </head>
 <body>
     <section id="Header">
