--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="line"></div>
             <div>
-                <p>We are product development and UX firm specializing in digital services for the whole spectrum.</p>
+                <p>We are product development and UX firm specializing in digital services for the whole spectrum 1111.</p>
             </div>
         </div>
     </a>
