Home Page Setup
- Added New Web page
- Added h1 tag in newpage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </section>
     <div class="tagLine">
-        <h1 style="font-size:7.5vw;">Logic. The Simple Solution.</h1>
+        <h1 style="font-size:7.5vw;">Logic. The Simple Solution     0000.</h1>
     </div>
     
     <a class="ourWork-head" href="#">
